examples/type_system/failing/133_if_branch_value_span_precision.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let _x = if true { 42 } else { "nope" }
}
